# error-message-format

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  lint.yml  test.yml
src/: ffi.rs  lib.rs
tests/: php.ini  test.rs  utils.rs
