[package]
name = "error-message-format"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = { version = "0.14", features = ["anyhow"] }
anyhow = "1.0"

[build-dependencies]
anyhow = "1.0"

[dev-dependencies]
rand = "0.8"
assertables = "9.8"

[profile.release]
strip = "debuginfo"
